all the requirements are mostly satisfied some minor changes are pending TODO: Home page validations, contact us and courtesy page,Committee emails

--- a/StudentSupport/templates/email_templates/confirm_email_template.html
+++ b/StudentSupport/templates/email_templates/confirm_email_template.html
@@ -368,7 +368,7 @@
                             </tr>
                           </tbody>
                         </table>
-                        <p>or verify using the link : <a>{{ url }}</a></p>
+                        <p>or verify using the link : <a href="{{ url }}">{{ url }}</a></p>
                         <p>If you did not create an account on internal portal of Government Engineering College, Bhavnagar. Ignore this mail.</p>
                       </td>
                     </tr>
