--- a/StudentSupport/templates/email_templates/recover_password_template.html
+++ b/StudentSupport/templates/email_templates/recover_password_template.html
@@ -361,7 +361,7 @@
                             </tr>
                           </tbody>
                         </table>
-                        <p>or paste this link in browser : <a>{{ url }}</a></p>
+                        <p>or paste this link in browser : <a href="{{ url }}">{{ url }}</a></p>
                         <p>If you haven't requested to change password, Ignore this mail.</p>
                       </td>
                     </tr>
