--- a/StudentSupport/templates/faculty/faculty_profile_page.html
+++ b/StudentSupport/templates/faculty/faculty_profile_page.html
@@ -110,7 +110,7 @@
                                     </ul>
                                     <!-- Tab panes -->
                                     <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 tab-content tabs-left-content card-block" style="border: 1px solid #353c4e; padding: 20px 20px;">
-                                        <div class="tab-pane active" id="personaldetail" role="tabpanel">
+                                        <div class="tab-pane fade show active" id="personaldetail" role="tabpanel">
                                             <form action="{% url 'faculty_profile' %}" method="post">
                                                 {% csrf_token %}
                                                 <div class="form-group row">
@@ -138,7 +138,7 @@
                                                 </div>
                                             </form>
                                         </div>
-                                        <div class="tab-pane" id="changepassword" role="tabpanel">
+                                        <div class="tab-pane fade" id="changepassword" role="tabpanel">
                                             <form method="post" action="{% url 'faculty_profile' %}">
                                                 {% csrf_token %}
                                                 <div class="form-group row">
