--- a/StudentSupport/templates/students/student_end_sem_feedback.html
+++ b/StudentSupport/templates/students/student_end_sem_feedback.html
@@ -43,7 +43,7 @@
 
 <!-- Modals Block > Start -->
 {% block modals %}
-    <!-- Feedback Form modal -->
+   <!-- Feedback Form modal -->
     <div class="modal fade" id="feedback-modal" role="dialog" aria-labelledby="ModalLabel" data-current-step="1" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
@@ -56,7 +56,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form action="{% url 'student_feedback_section' type='end-sem' %}" method="post">
+                    <form action="{% url 'student_feedback_section' type='end' %}" method="post">
                         {% csrf_token %}
                         <input type="hidden" name="subject_id" id="subject_id" />
                         <input type="hidden" name="faculty_id" id="faculty_id" />
@@ -67,7 +67,7 @@
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <p class="m-b-0" style="font-size: 15px;">Faculty Name : <b class="feedback_faculty_name"></b></p>
-                                    <p class="m-b-0" style="font-size: 15px;">Step {{ forloop.counter }} of {{ remark }}</p>
+                                    <p class="m-b-0" style="font-size: 15px;">Step {{ forloop.counter }} of {{ remark|add:1 }}</p>
                                 </div>
                                 <hr>
                                 <div class="form-group row">
@@ -91,13 +91,40 @@
                                 </div>
                             </fieldset>
                         {% endfor %}
+
                         <fieldset data-step="{{ remark }}">
                             <div class="d-flex justify-content-between align-items-center">
                                 <p class="m-b-0" style="font-size: 15px;">Subject Name : <b class="feedback_subject_name"></b></p>
                             </div>
                             <div class="d-flex justify-content-between align-items-center">
                                 <p class="m-b-0" style="font-size: 15px;">Faculty Name : <b class="feedback_faculty_name"></b></p>
-                                <p class="m-b-0" style="font-size: 15px;">Step {{ remark }} of {{ remark }}</p>
+                                <p class="m-b-0" style="font-size: 15px;">Step {{ remark }} of {{ remark|add:1 }}</p>
+                            </div>
+                            <hr>
+                            <div class="form-group row">
+                                <div class="col-sm-12">
+                                    <label class="col-form-label">How would you like to give feedback? </label>
+                                </div>
+                                <div class="col-sm-12 row">
+                                    <div class="col-sm-6">
+                                        <input type="radio" name="consent" id="consent_yes" value="1" checked>
+                                        <label class="col-form-label" for="consent_yes">Open</label>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <input type="radio" name="consent" id="consent_no" value="0">
+                                        <label class="col-form-label" for="consent_no">Anonymous</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </fieldset>
+
+                        <fieldset data-step="{{ remark|add:1 }}">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <p class="m-b-0" style="font-size: 15px;">Subject Name : <b class="feedback_subject_name"></b></p>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <p class="m-b-0" style="font-size: 15px;">Faculty Name : <b class="feedback_faculty_name"></b></p>
+                                <p class="m-b-0" style="font-size: 15px;">Step {{ remark|add:1 }} of {{ remark|add:1 }}</p>
                             </div>
                             <hr>
                             <div class="form-group row">
@@ -126,9 +153,8 @@
             </div>
         </div>
     </div>
-    <!-- Feedback form modal > End -->
 
-    <!-- View Feedback Modal > Start -->
+    <!-- View Feedback Modal -->
     <div class="modal fade" id="view-feedback-modal" aria-labelledby="ReviewFeedback" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
@@ -141,6 +167,9 @@
                         <p style="font-size: 15px;">Subject Name : <b class="view_feedback_subject_name"></b></p>
                         <p class="m-l-20" style="font-size: 15px;">Faculty Name : <b class="view_feedback_faculty_name"></b></p>
                     </div>
+                    <div class="d-flex justify-content-start align-items-center">
+                        <p style="font-size: 15px;">Is Feedback Anonymous : <b class="view_feedback_consent"></b></p>
+                    </div>
                     <div class="d-inline">
                         <p style="font-size: 15px;">Date of Feedback : <b class="view_feedback_date"></b></p>
                     </div>
@@ -150,8 +179,8 @@
                             {% for q in questions %}
                                 <tr>
                                     <th scope="row" style="width: 10%">{{ forloop.counter }}</th>
-                                    <td style="width: 70%">{{ q.question_text }}</td>
-                                    <td style="width: 20%"><div class="ans"></div></td>
+                                    <td style="width: 60%">{{ q.question_text }}</td>
+                                    <td style="width: 30%"><div class="ans"></div></td>
                                 </tr>
                             {% endfor %}
                             </tbody>
@@ -167,7 +196,6 @@
             </div>
         </div>
     </div>
-    <!-- View Feedback Modal > Start -->
 {% endblock modals %}
 <!-- Modals Block > End -->
 
@@ -270,9 +298,13 @@
                                                                 row += '<tr sub_id="{{ s.id }}">';
                                                                     row += '<td><div class="subject_name">{{ s.name }}</div></td>';
                                                                     row += '<td><div class="subject_code">{{ s.code }}</div></td>';
-                                                                    row += '<td><div class="teaching_faculty" fac_id="{{ j.fac_id }}">{{ j.fac_name }}</div></td>';
+                                                                    row += '<td><div class="teaching_faculty" fac_id="{{ j.fac_id }}" data-toggle="tooltip" title="{{ j.fac_dept_name }}">{{ j.fac_name }} ({{ j.fac_dept }})</div></td>';
                                                                     {% ifequal j.end_sem_obj None %}
-                                                                        row += '<td><span class="btn_give_feedback"><button href="javascript:void(0)" class="btn btn-round btn-outline-primary">Give Feedback</button></span></td>';
+                                                                        {% ifequal live True %}
+                                                                            row += '<td><span class="btn_give_feedback"><button href="javascript:void(0)" class="btn btn-round btn-outline-primary">Give Feedback</button></span></td>';
+                                                                        {% else %}
+                                                                            row += '<td><a class="btn btn-link">Feedback is not Live</a></td>';
+                                                                        {% endifequal %}
                                                                     {% else %}
                                                                         row += '<td><span class="btn_view_feedback" obj_id="{{ j.end_sem_obj }}"><button href="javascript:void(0)" class="btn btn-round btn-outline-primary">View Feedback</button></span></td>';
                                                                     {% endifequal %}
@@ -314,10 +346,6 @@
 
 <!-- Custom JS Block > Start -->
 {% block custom_js %}
-    <script>
-        // this is for making feedback modal into form wizard.
-        $("#feedback-modal").modalWizard();
-    </script>
     <script type="text/javascript">
         $(".expandable").on('click', function() {
             var $this = $(this);
@@ -334,10 +362,11 @@
                 var tbl_row = $(this).closest('tr');
                 var sub_id = tbl_row.attr('sub_id');
                 var subject_name = tbl_row.find('.subject_name').html().toString().trim();
+                var subject_code = tbl_row.find('.subject_code').html().toString().trim();
                 var fac_data = tbl_row.find('.teaching_faculty');
                 var faculty_name = fac_data.html().toString().trim();
                 var fac_id = fac_data.attr('fac_id');
-                $(document).find('.feedback_subject_name').html(subject_name);
+                $(document).find('.feedback_subject_name').html(subject_name+" (" + subject_code + ")");
                 $(document).find('.feedback_faculty_name').html(faculty_name);
                 $(document).find('input#subject_id').val(sub_id);
                 $(document).find('input#faculty_id').val(fac_id);
@@ -363,6 +392,7 @@
                         console.log(response);
                         modal.find('.view_feedback_subject_name').html(response['subject_name']);
                         modal.find('.view_feedback_faculty_name').html(response['faculty_name']);
+                        modal.find('.view_feedback_consent').html(response['anonymous']);
                         modal.find('.view_feedback_date').html(response['date']);
                         modal.find('#view_feedback_remarks').val(response['remarks']);
                         modal.find('div.ans').each(function (index, value) {
@@ -389,6 +419,10 @@
                 });
             });
         });
+    </script>
+    <script>
+        // this is for making feedback modal into form wizard.
+        $("#feedback-modal").modalWizard();
     </script>
 
     <script type="text/javascript">
